fixed blurred style section adding (px)

--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@
 }
 
 .blurred{
-    filter: blur(10);
+    filter: blur(4px);
     color: seashell;
 
 }
